# scte35-parser

./: .gitignore  CMakeLists.txt  SCTE 35 schema.xsd
lib/: CMakeLists.txt  scte35_parser.c  scte35_parser.h  scte35_types.h  scte36_print.c
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  ParseSCTE35FromByteArrayTest.cpp
